--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
     sdk: flutter
   geolocator: ^9.0.2
   get: ^4.6.5
+  google_maps_flutter: ^2.2.3
   http: ^0.13.5
   image_picker: ^0.8.6
+  loading_indicator: ^3.1.0
   permission_handler: ^10.2.0
   qr_flutter: ^4.0.0
   qrscan: ^0.3.3
